crates/test-ui/ui/extern_methods_not_allowed_mutable.stderr
error[E0277]: the trait bound `InteriorMutable: mutability::MutabilityIsAllowedMutable` is not satisfied
 --> ui/extern_methods_not_allowed_mutable.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method(test)]
  | |         fn test(&mut self);
  | |     }
  | | );
  | | ^
  | | |
  | |_the trait `mutability::MutabilityIsAllowedMutable` is not implemented for `InteriorMutable`
  |   required by a bound introduced by this call
  |
  = help: the following other types implement trait `mutability::MutabilityIsAllowedMutable`:
            Root
            Mutable
            ImmutableWithMutableSubclass<MS>
            MutableWithImmutableSuperclass<IS>
  = note: required for `MyObject` to implement `IsAllowedMutable`
  = note: required for `&mut MyObject` to implement `MessageReceiver`
  = note: required for `&mut MyObject` to implement `MsgSend`
  = note: this error originates in the macro `$crate::__rewrite_self_param_inner` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `InteriorMutable: mutability::MutabilityIsAllowedMutable` is not satisfied
 --> ui/extern_methods_not_allowed_mutable.rs
  |
  | / extern_methods!(
  | |     unsafe impl MyObject {
  | |         #[method_id(testId)]
  | |         fn test_id(&mut self) -> Id<Self>;
  | |     }
  | | );
  | |_^ the trait `mutability::MutabilityIsAllowedMutable` is not implemented for `InteriorMutable`
  |
  = help: the following other types implement trait `mutability::MutabilityIsAllowedMutable`:
            Root
            Mutable
            ImmutableWithMutableSubclass<MS>
            MutableWithImmutableSuperclass<IS>
  = note: required for `MyObject` to implement `IsAllowedMutable`
  = note: required for `&mut MyObject` to implement `MessageReceiver`
  = note: required for `&mut MyObject` to implement `MsgSend`
  = note: required for `RetainSemantics<5>` to implement `MsgSendId<&mut MyObject, Option<Id<_>>>`
  = note: this error originates in the macro `$crate::__msg_send_id_helper` which comes from the expansion of the macro `extern_methods` (in Nightly builds, run with -Z macro-backtrace for more info)
